--- a/cms/netlify/static/admin/config.yml
+++ b/cms/netlify/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - {label: "Featured Image", name: "featureImage", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "categories"
-    label: "[categories]"
+    label: "Categories"
     folder: "content/categories"
     create: true
     slug: "{{slug}}"
